# AVdata-distribution

./: .gitignore  CDS-COMPARISON-ANALYSIS.md  PIPELINE.md  RESEARCH_LOG.md  main.py  pyproject.toml  scenario-semantic-search-agent-research-design.md  scenario-semantic-search-text-based-start-guide.md
data/: active
data/artifacts/exp-001/: clip_ids.json
data/eval/: eval_set.json  eval_set_v2.json  exploration_summary.json  queries_v2.json
data/tags/: odd_coverage.json
docs/: HOW_TO_RUN.md  WORKFLOW.md  build_eval_set_analysis.md  service-architecture-analysis.md
docs/wiki/: INDEX.md
docs/wiki/data_distribution/: coverage-centric-coreset-selection.md  fend-longtail-trajectory.md  imitation-learning-scaling-laws.md  mosaic-data-selection.md  normalizing-flow-kde-ads-risk.md  sanflow-semantic-normalizing-flow.md  scaling-laws-e2e-nvidia.md  scenarionet-platform.md  trimflow-rare-event-sampling.md  ttc-scenario-distribution.md  wod-e2e-longtail-dataset.md
docs/wiki/embedding/: generative-causal-ood-forecasting.md  physics-guided-causal-scene-encoder.md  safety-aware-causal-transformer.md  t2sg-traffic-topology-scene-graph.md
experiments/: experiment_log.md
experiments/EXP-001/: analysis.md  config.yaml  hnsw_index_deep_dive.md  hypothesis.md  methods.md
experiments/EXP-002/: RUNBOOK.md  eval_set_v2_construction.md  hypothesis.md  methodology_revision.md  sanflow_explanation.md
literature/: GUIDE.md  links.md
scripts/: run_phase_a.sh  run_pipeline.sh  snapshot_artifacts.sh  visualize_phase_a.py
src/avdata/: config.py
src/avdata/api/: __init__.py  (+3 more)
(+43 files in other folders)
