[project]
name = "avdata-distirbution"
version = "0.1.0"
description = "Autonomous vehicle data distribution analysis and semantic search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # Phase 1: BM25 search
  "bm25s>=0.2.12",
  "PyStemmer>=2.2.0",
  # Phase 2: Embedding + vector index
  "sentence-transformers>=3.4",
  "faiss-cpu>=1.9",
  "numpy>=2.0",
  # Phase 3: ODD tag extraction
  "openai>=1.30",
  # Phase 5: Normalizing Flow density estimation (EXP-002 Axis C)
  "normflows>=1.7",
  # Phase 4: Distribution analysis
  "umap-learn>=0.5",
  "scikit-learn>=1.5",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "plotly>=5.22",
  # Utilities
  "tqdm>=4.66",
  "pandas>=2.2",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "tiktoken>=0.13.0",
  "pyarrow>=24.0.0",
  # API server
  "fastapi[standard]>=0.115",
  "uvicorn[standard]>=0.29",
  # UI
  "streamlit>=1.40",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.1",
  "ipykernel>=6.29",
  "ruff>=0.4",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/avdata"]

[tool.ruff.lint]
select = ["E", "F", "I"]
